--- a/week-3/22-checkout/index.html
+++ b/week-3/22-checkout/index.html
@@ -38,8 +38,19 @@
           <h2 class="checkout__title">Checkout</h2>
           <form method="GET" id="checkout-form" class="checkout__form">
             <!-- Add the form fields here -->
-
-            <button type="submit">Complete Purchase</button>
+            <div>
+              <label for="customer-name" id="cn">Name</label>
+              <input type="text" name="customer-name" id="cn" />
+            </div>
+            <div>
+              <label for="customer-email" id="ce">Email</label>
+              <input type="email" name="customer-email" id="ce" />
+              <label for="customer-phone" id="cp">Phone</label>
+            </div>
+            <div>
+              <input type="tel" name="customer-phone" id="cp" />
+              <button type="submit">Complete Purchase</button>
+            </div>
           </form>
         </div>
       </main>
