--- a/week-3/23-comments/index.html
+++ b/week-3/23-comments/index.html
@@ -32,6 +32,9 @@
           <p>Add your comments and let us know what you think!</p>
 
           <!-- Your comment form goes here -->
+          <label for="comment"></label>
+          <form method="get"><textarea name="comment"></textarea></form>
+          <button> Send Comment</button>
         </div>
       </main>
     </div>
