--- a/week-3/23-comments/index.html
+++ b/week-3/23-comments/index.html
@@ -33,8 +33,10 @@
 
           <!-- Your comment form goes here -->
           <label for="comment"></label>
-          <form method="get"><textarea name="comment"></textarea></form>
-          <button> Send Comment</button>
+          <form method="get">
+            <textarea name="comment"></textarea>
+          </form>
+          <button>Send Comment</button>
         </div>
       </main>
     </div>
