--- a/week-3/24-dietary/index.html
+++ b/week-3/24-dietary/index.html
@@ -20,6 +20,29 @@
 
         <form>
           <!-- Your multiple choice goes here -->
+          <fieldset>
+            <legend>Please select all of your dietary requirements</legend>
+            <input type="checkbox" id="halal" />
+            <label for="checkbox" id="halal">Halal</label>
+            <br />
+            <br />
+            <input type="checkbox" id="kosher" />
+            <label for="checkbox" id="kosher">Kosher</label>
+            <br />
+            <br />
+            <input type="checkbox" id="vegeterian" />
+            <label for="checkbox" id="vegeterian">Vegeterian</label>
+            <br />
+            <br />
+            <input type="checkbox" id="vegan" />
+            <label for="checkbox" id="vegan">Vegan</label>
+            <br />
+            <br />
+            <input type="checkbox" id="gluten-free" />
+            <label for="checkbox" id="gluten-free">Gluten Free</label>
+            <br />
+            <br />
+          </fieldset>
           <button type="submit">Submit</button>
         </form>
       </main>
